--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/image/
     - assets/temp/
+    - assets/svg/
