--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,7 +7,12 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
+        // START: FlutterFire Configuration
+        classpath 'com.google.gms:google-services:4.3.10'
+        // END: FlutterFire Configuration
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        implementation platform('com.google.firebase:firebase-bom:32.7.3')
+        implementation 'com.google.firebase:firebase-analytics'
     }
 }
 
@@ -28,4 +33,8 @@ subprojects {
 
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
+}
+plugins{
+    id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
