--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
   sdk: ">=2.17.5 <3.0.0"
 
 dependencies:
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.5.0
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
